# pinigu-app

./: .dockerignore  .gitignore  Dockerfile  README_DOCKER.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  verify_amount_override.py
config/: file_signatures.yaml
doc/: ARCHITECTURE_AND_FEATURES.md  DOCUMENTATION_INDEX.md  QUICKSTART_AND_USAGE.md
management/: bbva.py  revolut.py  santander.py
scripts/: llm_map_categories.py  migrate_mapping_rules.py  update_mappings.py  verify_refactor.py  wise_consolidate.py
utils/: __init__.py  categorization.py  consolidation.py  file_detection.py  file_management.py  logger.py  manual_overrides.py  non_transaction_logic.py  raw_file_reader.py  transaction_keys.py
views/: __init__.py  bulk_mapping (Copy).py  bulk_mapping.py  dash_details.py  dash_expenses.py  dash_financial_health.py  dash_income.py  dash_investments.py  dash_monthly_balance.py  dash_utils.py  dashboard.py  dashboard_old.py  dashboard_v1.py  dashboard_v2.py  file_management.py  manual_overwrite.py  mapping.py  mapping_pairs_view.py  non_transaction_accounts.py  upload_files.py
